// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<withMaterialTheme(Subheader)
  text="Subhead"
  textStyle={{
    width: 100
  }}
 /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Object {
          "width": 100,
        },
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) color="#123456" text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "#123456",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) dark secondary text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) dark text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) inset text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      Object {
        "paddingLeft": 72,
        "paddingRight": 16,
      },
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) light secondary text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(255, 255, 255, 0.7)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) light text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) lines={2} text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={2}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) onLayout={function noRefCheck() {}} text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) secondary text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;

exports[`<withMaterialTheme(Subheader) text="Subhead" /> 1`] = `
<View
  style={
    Array [
      Object {
        "height": 48,
        "paddingHorizontal": 16,
      },
      false,
      undefined,
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
        },
        undefined,
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
        },
      ]
    }
  >
    Subhead
  </Text>
</View>
`;
